NITRO-2369 remove private key stuff needed for private repos

--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -21,10 +21,10 @@ jobs:
 
     steps:
       # SSH Agent Setup required for git to pull modules from private repos
-      - name: SSH Agent Setup
-        uses: webfactory/ssh-agent@v0.4.1
-        with:
-          ssh-private-key: ${{ secrets.GLOBAL_FLEXERA_CI_PRIVATE_SSH_KEY }}
+      #- name: SSH Agent Setup
+        #uses: webfactory/ssh-agent@v0.4.1
+        #with:
+          #ssh-private-key: ${{ secrets.GLOBAL_FLEXERA_CI_PRIVATE_SSH_KEY }}
 
       # Force SSH authentication for repositories with HTTPS references
       - name: Git Config
@@ -36,7 +36,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
-          ssh-key: ${{ secrets.GLOBAL_FLEXERA_CI_PRIVATE_SSH_KEY }}
+          #ssh-key: ${{ secrets.GLOBAL_FLEXERA_CI_PRIVATE_SSH_KEY }}
           submodules: recursive
           path: go/src/github.com/${{ github.repository }}
 
