--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,10 +24,17 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: ['2.1', '2.2', '2.3']
 
     steps:
+      # Force SSH authentication for repositories with HTTPS references
+      - name: Git Config
+        run: |
+          git config --global --add url.ssh://git@github.com/flexera/.insteadof https://github.com/flexera/
+          git config --global --add url.ssh://git@github.com/rightscale/.insteadof https://github.com/rightscale/
+
       - name: Checkout
         uses: actions/checkout@v2
         with:
